# Loupe

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md  design.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: macos-intel.yml  native-verify.yml  release.yml
assets/branding/: Loupe.icns  Loupe.rc
cmake/: LoupeWarnings.cmake
corpus/: README.md  cases.example.json
docs/development/: macos-apple-silicon.md  portability.md  release-pipeline.md
docs/evidence/: README.md  phase-0-report.md  phase-1-template.md
docs/evidence/platform/: windows.json
docs/review/: phase-1-ux-review.md  ui-refinement-handoff.md  ui-refresh-strategy.md  ui-refresh-w8-acceptance.md
docs/superpowers/plans/: 2026-07-10-loupe-phase-0-feasibility.md  2026-07-10-loupe-phase-1-inspection-shell.md  2026-07-10-loupe-phase-2-selective-export-pilot.md  2026-07-10-loupe-phase-3-hardening-release.md  2026-07-14-macos-ux-review-build.md  2026-07-15-loupe-progressive-cad-interaction.md  2026-07-16-cad-camera-topology-export.md  2026-07-17-gpu-section-preview-and-themed-menus.md  README.md  (+6 more)
prototype/: index.html  package-lock.json  package.json  playwright.config.js
prototype/src/: app.js  styles.css
prototype/tests/: workspaces.spec.js
scripts/: check_qml_style_gates.py  check_theme_contrast.py  run-loupe-debug.ps1  run-loupe-debug.sh
scripts/benchmark/: inspect-corpus.sh  macos-arm64-debug-budgets.json
scripts/bootstrap/: macos.sh  windows.ps1
scripts/branding/: generate-app-icons.sh
scripts/macos/: Open Loupe (first run).command  unblock-loupe.applescript
scripts/review/: macos.sh
scripts/verify/: macos.sh  windows.ps1
src/app/: ApplicationController.cpp  ApplicationController.h  CMakeLists.txt  main.cpp
src/app/cache/: CacheKey.h  CacheStore.cpp  CacheStore.h  MaterialStore.cpp  MaterialStore.h  OverrideStore.cpp  OverrideStore.h  SourceFingerprint.cpp  SourceFingerprint.h
src/app/export/: ExportWorkspaceController.cpp  ExportWorkspaceController.h
src/app/models/: AssemblyTreeModel.cpp  AssemblyTreeModel.h  MaterialLibraryModel.cpp  MaterialLibraryModel.h  SelectionModel.cpp  SelectionModel.h  ThemePreference.cpp  ThemePreference.h  UnitReviewModel.cpp  UnitReviewModel.h  VisibilityModel.cpp  VisibilityModel.h
src/app/platform/: WindowChrome.cpp  WindowChrome.h  WindowChrome.mm
src/app/qml/: Main.qml  OpenStepDialog.qml  Theme.qml
src/app/qml/export/: ExportBucket.qml  ExportComponentPicker.qml  ExportPreview.qml  ExportSettings.qml  ExportWorkspace.qml
src/app/qml/inspect/: AboutLoupeDialog.qml  CadEdgeMaterial.qml  CapturePanel.qml  ContextPanel.qml  ElevatedPanel.qml  InspectWorkspace.qml  InspectionDock.qml  InteractionGuide.qml  MeasurementFaceHighlight.qml  MeasurementPanel.qml  PointerInputRouter.qml  ProjectionControl.qml  SectionClipMaterial.qml  SectionManipulator.qml  SectionOffsetSlider.qml  SectionPanel.qml  StepViewport.qml  ThemedButton.qml  ThemedCheckBox.qml  ThemedColorButton.qml  ThemedColorDialog.qml  ThemedComboBox.qml  ThemedMenu.qml  ThemedMenuBar.qml  ThemedMenuBarItem.qml  ThemedMenuItem.qml  ThemedMenuSeparator.qml  ThemedProgressBar.qml  ThemedRadioButton.qml  ThemedSegmentedControl.qml  ThemedSpinBox.qml  ThemedSwitch.qml  ThemedTabButton.qml  ThemedTextField.qml  ThemedToolButton.qml  ThemedToolTip.qml  ToolIcon.qml  ViewCube.qml  ViewportNavigation.qml  ViewportVisualTheme.qml
src/app/qml/inspect/shaders/: cad-edge.frag  cad-edge.vert  section-clip.frag
src/app/render/: CadEdgeGeometry.cpp  CadEdgeGeometry.h  DefinitionInstances.cpp  DefinitionInstances.h  MeshGeometry.cpp  MeshGeometry.h  SceneModel.cpp  SceneModel.h  SectionMeshBuilder.cpp  SectionMeshBuilder.h
src/app/tools/: CaptureController.cpp  CaptureController.h  MeasurementController.cpp  MeasurementController.h  SectionController.cpp  SectionController.h
src/app/worker/: WorkerClient.cpp  WorkerClient.h
src/core/: CMakeLists.txt
src/core/domain/: AssemblyTypes.h  StableId.cpp  StableId.h
src/core/export/: AtomicExportFile.h  ExportPlan.cpp  ExportPlan.h  StepExporter.cpp  StepExporter.h  StlExporter.cpp  StlExporter.h
src/core/import/: StepImporter.cpp  StepImporter.h  StepImporterTestSupport.h
src/core/inspection/: GeometryAnalysis.cpp  GeometryAnalysis.h  MaterialProperties.cpp  MaterialProperties.h  TopologyAnalysis.cpp  TopologyAnalysis.h
src/core/report/: EvidenceWriter.cpp  EvidenceWriter.h
src/core/units/: UnitPolicy.cpp  UnitPolicy.h
src/core/validation/: OutputValidator.cpp  OutputValidator.h
src/protocol/: CMakeLists.txt  GeometryPayload.cpp  GeometryPayload.h  ProtocolFrame.cpp  ProtocolFrame.h  ProtocolJson.cpp  ProtocolTypes.h
src/spike/: CMakeLists.txt  main.cpp
src/worker/: CMakeLists.txt  ImportBenchmark.cpp  ImportSession.cpp  ImportSession.h  WorkerServer.cpp  WorkerServer.h  main.cpp
tests/: CMakeLists.txt
tests/app/: test_application_controller.cpp  test_assembly_tree_model.cpp  test_cache_store.cpp  test_export_workspace_controller.cpp  test_inspection_tools.cpp  test_material_store.cpp  test_override_store.cpp  test_scene_model.cpp  test_source_fingerprint.cpp  test_visibility_model.cpp  test_worker_client.cpp
tests/cmake/: test_presets.ps1
tests/core/: test_bootstrap.cpp  test_export_plan.cpp  test_geometry_analysis.cpp  test_material_properties.cpp  test_output_validation.cpp  test_selected_export.cpp  test_spike_cli.cpp  test_stable_id.cpp  test_step_import.cpp  test_unit_policy.cpp
tests/fixtures/: FixtureFactory.cpp  FixtureFactory.h
tests/protocol/: test_geometry_payload.cpp  test_protocol.cpp  test_protocol_frame.cpp
tests/qml/: qml_smoke.cpp  qml_tests_main.cpp  tst_CapturePanel.qml  tst_MeasurementPanel.qml  tst_PointerInputRouter.qml  tst_ProjectionControl.qml  tst_SectionControls.qml  tst_SectionPanel.qml  tst_ThemedControls.qml  tst_ThemedMenus.qml  tst_ViewportNavigation.qml  tst_ViewportVisualTheme.qml
tests/worker/: test_worker_process.cpp
triplets/: arm64-osx-release.cmake  x64-osx-release.cmake  x64-windows-release.cmake
(+16 files in other folders)
